Added copyright footer.

--- a/site/style.css
+++ b/site/style.css
@@ -117,8 +117,10 @@ header {
 	margin-bottom: 40px;
 	}
 
-footer { 
-	text-align: center; 
+footer {
+	color: white;
+	background-color: grey;
+	text-align: center;
 	}
 footer a:link, footer a:visited { 
 	margin-right: 20px; 
