--- a/site/style.css
+++ b/site/style.css
@@ -12,19 +12,70 @@
 
 .navBar {
   font-family: helvetica;
+  font-weight: bold; 
   font-size: 150%;
   color: white;
   background-color: black;
   text-align: center;
 }
 
+.navBar a{
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 25px;
+	padding-right: 25px;
+}
+
+.navBar a:link { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #B7A5DF;
+	}
+.navBar a:visited { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #D4CDDC;
+	}
+.navBar a:hover, .navBar a:focus, .navBar a:active { 
+	text-decoration: underline; 
+	color: #9685BA;
+	}
+
 .navBar2 {
   overflow: hidden;
   font-family: helvetica;
+  font-weight: bold; 
   font-size: 125%;
   color: white;
   background-color: grey;
   text-align: center;
+}
+
+.navBar2 a{
+	padding-top: 8px;
+	padding-bottom: 8px;
+	padding-left: 15px;
+	padding-right: 15px;
+}
+
+.navBar2 a:link { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #B7A5DF;
+	}
+.navBar2 a:visited { 
+	font-weight: bold; 
+	text-decoration: none; 
+	color: #D4CDDC;
+	}
+.navBar2 a:hover, .navBar2 a:focus, .navBar2 a:active { 
+	text-decoration: underline; 
+	color: #9685BA;
+	}
+	
+.currentLink {
+   color: #640200;
+   background-color: #000000;
 }
 
 /* The dropdown container */
@@ -36,27 +87,32 @@
 
 /* Dropdown button */
 .dropdown .dropbtn {
-  font-size: 16px;
+  font-size: inherit;
+  font-weight: bold; 
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  padding-left: 25px;
+  padding-right: 25px;
   background-color: inherit;
   font-family: inherit; /* Important for vertical align on mobile phones */
   margin: 0; /* Important for vertical align on mobile phones */
 }
 
+
 /* Add a red background color to navbar links on hover */
 .navbar a:hover, .dropdown:hover .dropbtn {
-  background-color: red;
+  background-color: black;
 }
 
 /* Dropdown content (hidden by default) */
 .dropdown-content {
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
-  min-width: 160px;
+  background-color: darkgrey;
+  min-width: 150px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
 }
@@ -65,7 +121,11 @@
 .dropdown-content a {
   float: none;
   color: black;
-  padding: 12px 16px;
+  font-family: helvetica;
+  font-weight: bold; 
+  font-size: 100%;
+  padding-left: 25px;
+  padding-right: 25px;
   text-decoration: none;
   display: block;
   text-align: left;
@@ -73,7 +133,7 @@
 
 /* Add a grey background color to dropdown links on hover */
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: grey;
 }
 
 /* Show the dropdown menu on hover */
@@ -111,7 +171,6 @@ header h2 {
 	width: 200px; 
 	height: 18px; 
 	float: right;
-
 	text-indent: 100%;
 	white-space: nowrap;
 	overflow: hidden;
@@ -125,20 +184,6 @@ p {
 	text-align: justify;
 	}
 	
-a:link { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #B7A5DF;
-	}
-a:visited { 
-	font-weight: bold; 
-	text-decoration: none; 
-	color: #D4CDDC;
-	}
-a:hover, a:focus, a:active { 
-	text-decoration: underline; 
-	color: #9685BA;
-	}
 abbr {
 	border-bottom: none;
 	}
