Modifications according to andrea comment

--- a/site/style.css
+++ b/site/style.css
@@ -235,7 +235,8 @@ footer a:link, footer a:visited {
 	}
 
 #responsize-image {
-  width: 100%;
+  width: 80%;
+  max-width: 600px;
   height: auto;
 }
 
@@ -246,6 +247,7 @@ footer a:link, footer a:visited {
 
 #gallery figure {
   position: absolute;
+  max-width: 600px;
   width: 70%;
 }
 
