--- a/site/style.css
+++ b/site/style.css
@@ -88,6 +88,21 @@
   background-color: grey;
 }
 
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.frame {
+    border: 4px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+
+
+
+
 /* Dropdown button */
 .dropdown .dropbtn {
   border-radius:20px;
@@ -388,6 +403,11 @@ footer a:link, footer a:visited {
   transition: background-color 0.6s ease;
 }
 
+.tableWithBorders {
+  border-collapse: collapse;
+  width: 90%;
+}
+
 .active, .dot:hover {
   background-color: #717171;
 }
@@ -408,5 +428,17 @@ footer a:link, footer a:visited {
 @keyframes fade {
   from {opacity: 0.4}
   to {opacity: 1}
+}
+
+th {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
+}
+
+td {
+  border: 1px solid black;
+  padding: 8px;
+  text-align: left;
 }
 
